--- a/小程序/图片识别二副本/pages/index/index.wxss
+++ b/小程序/图片识别二副本/pages/index/index.wxss
@@ -93,6 +93,15 @@
   box-sizing: border-box;
 }
 
+.result-text {
+  width: 100%;
+  min-height: 260rpx;
+  font-size: 28rpx;
+  line-height: 1.6;
+  color: #333;
+  padding: 0;
+}
+
 .input-section {
   margin-bottom: 20rpx;
 }
