--- a/小程序/图片识别四/pages/index/index.wxml
+++ b/小程序/图片识别四/pages/index/index.wxml
@@ -196,16 +196,20 @@
   <!-- 底部导航栏 -->
   <view class="tab-bar">
     <view class="tab-item {{currentTab==0 ? 'active' : ''}}" bindtap="switchTab" data-index="0">
-      测试
+      <image class="tab-icon" src="/images/icons/test{{currentTab==0 ? '-active' : ''}}.png"></image>
+      <text>测试</text>
     </view>
     <view class="tab-item {{currentTab==1 ? 'active' : ''}}" bindtap="switchTab" data-index="1">
-      录入
+      <image class="tab-icon" src="/images/icons/input{{currentTab==1 ? '-active' : ''}}.png"></image>
+      <text>录入</text>
     </view>
     <view class="tab-item {{currentTab==2 ? 'active' : ''}}" bindtap="switchTab" data-index="2">
-      整理
+      <image class="tab-icon" src="/images/icons/arrange{{currentTab==2 ? '-active' : ''}}.png"></image>
+      <text>整理</text>
     </view>
     <view class="tab-item {{currentTab==3 ? 'active' : ''}}" bindtap="switchTab" data-index="3">
-      记录
+      <image class="tab-icon" src="/images/icons/record{{currentTab==3 ? '-active' : ''}}.png"></image>
+      <text>记录</text>
     </view>
   </view>
 
