--- a/小程序/图片识别四/pages/index/index.wxss
+++ b/小程序/图片识别四/pages/index/index.wxss
@@ -25,13 +25,26 @@
 }
 
 .tab-item {
-  font-size: 28rpx;
-  color: #333333;
-  padding: 20rpx 0;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 10rpx 0;
+}
+
+.tab-icon {
+  width: 48rpx;
+  height: 48rpx;
+  margin-bottom: 6rpx;
+}
+
+.tab-item text {
+  font-size: 24rpx;
+  color: #333333;
+}
+
+.tab-item.active text {
+  color: #07c160;
 }
 
 .active {
@@ -39,16 +52,7 @@
   font-weight: bold;
 }
 
-.active::after {
-  content: '';
-  position: absolute;
-  top: -6rpx;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 40rpx;
-  height: 4rpx;
-  background-color: #07c160;
-}
+
 
 .input-page {
   padding: 20rpx;
